--- a/templates/contact.html
+++ b/templates/contact.html
@@ -13,19 +13,19 @@
 </head>
 <body>
     <header id = "header">
-        <nav class ="menu">
+        <nav style="background-color:#000000" class="menu">
             <ul>
-                <li><a href = "index.html" <b>Home</b></a></li>
-                <li><a href = "about.html" <b>About</b></a></li>
+                <li><a href = "/home" <b>Home</b></a></li>
+                <li><a href = "/about" <b>About</b></a></li>
                 <li><a href = "/service" <b>Service</b></a></li>
-                <li><a href = "contact.html" <b>Contact</b></a></li>
-                <li><a href = "goods.html" <b>Goods</b></a></li>
+                <li><a href = "/contact" <b>Contact</b></a></li>
+                <li><a href = "/goods" <b>Goods</b></a></li>
             </ul>
         </nav>
     </header>
     <div class="list">
         <div class = "four">
-            <img class = "contact_img" src ="./imgs/bg.jpg">
+            <img class = "contact_img" src ="./static/img/bg.jpg">
             <a href="https://sjh7397.pythonanywhere.com" class="ct">Home</a>
             <a href="mailto:allislijell@gmail.com" class="ct">Gmail</a>
             <a href="https://github.com/LiJell/Final-pjt" class="ct">Github</a>
