--- a/templates/goods.html
+++ b/templates/goods.html
@@ -13,13 +13,13 @@
 </head>
 <body>
     <header id = "header">
-        <nav class ="menu">
+        <nav style="background-color:#000000" class ="menu">
             <ul>
-                <li><a href = "index.html" <b>Home</b></a></li>
-                <li><a href = "about.html" <b>About</b></a></li>
-                <li><a href = "service.html" <b>Service</b></a></li>
-                <li><a href = "contact.html" <b>Contact</b></a></li>
-                <li><a href = "goods.html" <b>Goods</b></a></li>
+                <li><a href = "/home" <b>Home</b></a></li>
+                <li><a href = "/about" <b>About</b></a></li>
+                <li><a href = "/service" <b>Service</b></a></li>
+                <li><a href = "/contact" <b>Contact</b></a></li>
+                <li><a href = "/goods" <b>Goods</b></a></li>
             </ul>
         </nav>
     </header>
