--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta name="robots" content="index,follow" />
-    <meta
+    <met
       name="google-site-verification"
       content="0025mGEf2ZtX4gjWrrrs9xwChLlHo91qx0srZPNUsXw"
     />
@@ -19,14 +19,15 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap');
     </style>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
 
 <div id="container">
     <header id = "header">
-        <nav class ="menu">
+        <nav style="background-color:#000000" class="menu">
             <ul>
-                <li><a href = "/index" <b>Home</b></a></li>
+                <li><a href = "/home" <b>Home</b></a></li>
                 <li><a href = "/about" <b>About</b></a></li>
                 <li><a href = "/service" <b>Service</b></a></li>
                 <li><a href = "/contact" <b>Contact</b></a></li>
@@ -106,28 +107,38 @@
   <div class="list">
     <div class = "five">
       <h1><br><br> 🐶 Goods Shops 🐶 </h1>
-            <div class = "goods">
-                <div class="lists">
-                    <img class = "list_img" src="./imgs/what i love/.jpg" alt="">
-                    <p class = "list_text"> goods1</p>
-                </div>
-
-                <div class="lists">
-                    <img class = "list_img" src="./imgs/what i love/.jpg" alt="">
-                    <p class = "list_text"> goods2</p>
-                </div>
-
-                <div class="lists">
-                    <img class = "list_img" src="./imgs/what i love/.jpg" alt="">
-                    <p class = "list_text"> goods3</p>
-                </div>
-
-                <div class="lists">
-                    <img class = "list_img" src="./imgs/what i love/.jpg" alt="">
-                    <p class = "list_text"> goods4</p>
+            <div class = "container goods">
+                <div class="row">
+                    <div class="col">
+                        <div class="lists">
+                            <img class = "list_img" src="./imgs/what i love/.jpg" alt="">
+                            <p class = "list_text"> goods1</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="lists">
+                            <img class = "list_img" src="./imgs/what i love/.jpg" alt="">
+                            <p class = "list_text"> goods2</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="lists">
+                            <img class = "list_img" src="./imgs/what i love/.jpg" alt="">
+                            <p class = "list_text"> goods3</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="lists">
+                            <img class = "list_img" src="./imgs/what i love/.jpg" alt="">
+                            <p class = "list_text"> goods4</p>
+                        </div>
+                    </div>
                 </div>
             </div>
     </div>
   </div>
 </div>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
