--- a/templates/result.html
+++ b/templates/result.html
@@ -1,39 +1,53 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>LimnPet</title>
-    <link
-      rel="stylesheet"
-      href="{{ url_for('static', filename = 'css/style.css') }}"
-    />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>LimnPet 🐶</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename = 'css/style.css') }}">
+    <link rel = "stylesheet" href = "{{ url_for('static', filename = 'css/main.css') }}">
+    <link rel = "stylesheet" href = "{{ url_for('static', filename = 'css/service.css') }}">
+
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap');
+    </style>
   </head>
 
   <body>
+  <div style="text-align: center" id='div_show'>
+     <header id = "header">
+        <nav style="background-color:#000000" class="menu">
+            <ul>
+                <li><a href = "/home" <b>Home</b></a></li>
+                <li><a href = "/about" <b>About</b></a></li>
+                <li><a href = "/service" <b>Service</b></a></li>
+                <li><a href = "/contact" <b>Contact</b></a></li>
+                <li><a href = "/goods" <b>Goods</b></a></li>
+            </ul>
+        </nav>
+    </header>
     <h1 style="text-align: center">LimnPet</h1>
     <h3 style="text-align: center">
       Draw your pet in the style of your choice
     </h3>
-    <div style="text-align: center">
-      <div>완료</div>
       <img
         src="{{url_for('static', filename = img_file)}}"
         width="400"
         alt="Error"
       />
-      <div>
+          <div>
           <a href="{{url_for('static', filename = img_file)}}" download>
               <button class="remove-image">
                 <span class="image-title">저장하기</span>
               </button>
           </a>
-      </div>
-      <div>
+          </div>
+        <div>
         <button class="remove-image" type="button" onClick="location.href='/home'">
           <span class="image-title">첫페이지로돌아가기</span>
         </button>
-      </div>
+        </div>
       <!-- addthis 위치 -->
       <div class="addthis_inline_share_toolbox"></div>
     </div>
