--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,35 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
-    <link rel = "stylesheet" href = "./static/css/main.css">
-    <link rel = "stylesheet" href = "./static/css/contact.css">
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap');
-    </style>
-</head>
-<body>
-    <header id = "header">
-        <nav style="background-color:#000000" class="menu">
-            <ul>
-                <li><a href = "/home" <b>Home</b></a></li>
-                <li><a href = "/about" <b>About</b></a></li>
-                <li><a href = "/service" <b>Service</b></a></li>
-                <li><a href = "/contact" <b>Contact</b></a></li>
-                <li><a href = "/goods" <b>Goods</b></a></li>
-            </ul>
-        </nav>
-    </header>
-    <div class="list">
-        <div class = "four">
-            <img class = "contact_img" src ="./static/img/bg.jpg">
-            <a href="https://sjh7397.pythonanywhere.com" class="ct">Home</a>
-            <a href="mailto:allislijell@gmail.com" class="ct">Gmail</a>
-            <a href="https://github.com/LiJell/Final-pjt" class="ct">Github</a>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Contact</title>
+        <link rel = "stylesheet" href = "{{ url_for('static', filename = 'css/main.css') }}">
+        <link rel = "stylesheet" href = "{{ url_for('static', filename = 'css/contact.css') }}">
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap');
+        </style>
+    </head>
+
+    <body>
+        <div id="header" role="menu">
+            <nav class="menu">
+                <ul>
+                <li><a href = "/home"><b>Home</b></a></li>
+                <li><a href = "/about"><b>About</b></a></li>
+                <li><a href = "/service"><b>Service</b></a></li>
+                <li><a href = "/contact"><b>Contact</b></a></li>
+                <li><a href = "/goods" ><b>Goods</b></a></li>
+                </ul>
+            </nav>
         </div>
-    </div>
-</body>
+
+        <div id="container" role="main">
+            <div class="list">
+            <div class="four">
+                <img class = "contact_img" src ="{{ url_for('static', filename = 'img/bg.jpg') }}">
+                <div>
+                    <a href="https://www.limnpet.ml" class="ct">Home</a>
+                    <a href="mailto:allislijell@gmail.com" class="ct">Gmail</a>
+                    <a href="https://github.com/LiJell/Final-pjt" class="ct">Github</a>
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
