--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta name="robots" content="index,follow" />
     <met
       name="google-site-verification"
@@ -14,131 +14,124 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LimnPet 🐶</title>
-    <link rel = "stylesheet" href = "./static/css/main.css">
-    <link rel = "stylesheet" href = "./static/css/scroll.css">
+    <link rel = "stylesheet" href = "{{ url_for('static', filename = 'css/main.css') }}">
+    <link rel = "stylesheet" href = "{{ url_for('static', filename = 'css/scroll.css') }}">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap');
     </style>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-</head>
-<body>
+  </head>
 
-<div id="container">
-    <header id = "header">
-        <nav style="background-color:#000000" class="menu">
-            <ul>
-                <li><a href = "/home" <b>Home</b></a></li>
-                <li><a href = "/about" <b>About</b></a></li>
-                <li><a href = "/service" <b>Service</b></a></li>
-                <li><a href = "/contact" <b>Contact</b></a></li>
-                <li><a href = "/goods" <b>Goods</b></a></li>
-            </ul>
-        </nav>
-    </header>
+  <body>
+    <div id="header" role="menu">
+      <nav class="menu">
+        <ul>
+          <li><a href = "/home"><b>Home</b></a></li>
+          <li><a href = "/about"><b>About</b></a></li>
+          <li><a href = "/service"><b>Service</b></a></li>
+          <li><a href = "/contact"><b>Contact</b></a></li>
+          <li><a href = "/goods" ><b>Goods</b></a></li>
+        </ul>
+      </nav>
+    </div>
 
-  <!-- 홈 -->
-  <div class="list">
-      <div class="one">
-        <span class="profile"><img src="{{ url_for('static', filename = 'img/img_5.jpg') }}" width="550px;" height="550px" alt=""/></span>
-        <h3><strong>Hello! We are LimnPet</strong> <br>You can scroll down if you want to see ours!</h3>
+    <div id="container" role="main">
+
+      <div class="list">
+        <div class="one">
+          <span class="profile"><img src="{{ url_for('static', filename = 'img/img_5.jpg') }}" alt=""/></span>
+          <h3><strong>Hello! We are LimnPet</strong></h5> 
+          <h4>You can scroll down if you want to see ours!</h4>
+        </div>
+
+      <div class="list">
+        <div class="two">
+          <img class="slide1 slide" src="{{ url_for('static', filename = 'img/img_1.jpg') }}" > 
+          <img class="slide1 slide" src="{{ url_for('static', filename = 'img/img_2.jpg') }}" > 
+          <img class="slide1 slide" src="{{ url_for('static', filename = 'img/img_3.jpg') }}" >
+          <h3> 
+            <strong>내 반려견의 그림을 그리는 방법?</strong>
+            <br>
+            <br>
+            <strong>LimnPet!</strong>
+          </h3>
+          <div class="'intext">
+            LimnPet은 반려견 커스텀 굿즈 제작을 위한 GAN 기반 cartoon stylization 상용서비스입니다.<br><br>
+            반려견 커스텀 굿즈 제작 과정간 따로 그림 서비스를 받아야하는 불편함을 해소하기 위한<br>
+            GAN 기반 반려견 그림 자동 생성 및 저장/공유 서비스를 제공합니다<br><br>
+            생성된 이미지를 기반으로 반려견 커스텀 굿즈(휴대폰 케이스, 컵, 옷 등)를 제작할 수 있도록<br>
+            관련 업체와 사용자간 의사소통 채널 형성의 기반을 마련해 나가겠습니다.
+          </div>
+        </div>
       </div>
-  </div>
 
-  <!-- 소개 -->
-  <div class="list">
-      <div class ="two">
+      <div class="list">
+        <div class="three">
+          <h1>서비스 예시 이미지 및 설명 첨부 예정</h1>
+        </div>
+      </div>
 
-    <!--슬라이드 -->
+      <div class="list">
+        <div class="four">
+          <img class = "contact_img" src ="{{ url_for('static', filename = 'img/bg.jpg') }}">
+          <div>
+            <a href="https://www.limnpet.ml" class="ct">Home</a>
+            <a href="mailto:allislijell@gmail.com" class="ct">Gmail</a>
+            <a href="https://github.com/LiJell/Final-pjt" class="ct">Github</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="list">
+        <div class="five">
+          <h1 styl="text-align:center"> 🐶 Goods Shops 🐶 </h1>
+          <div class="lists">
+            <img class = "list_img" src="{{ url_for('static', filename = 'img/goods_clothes.jpg') }}" alt="">
+            <p>의류</p>
+          </div>
+          <div class="lists">
+            <img class = "list_img" src="{{ url_for('static', filename = 'img/goods_griptok.jpg') }}" alt="">
+            <p>휴대폰 액세서리</p>
+          </div>
+          <div class="lists">
+            <img class = "list_img" src="{{ url_for('static', filename = 'img/goods_cup.jpg') }}" alt="">
+            <p>생활용품</p>
+          </div>
+          <div class="lists">
+            <img class = "list_img" src="{{ url_for('static', filename = 'img/goods_sticker.jpg') }}" alt="">
+            <p>그 외 기타</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="list">
+        <div class="six">
+          <h5 style="color:white">정보 입력?</h5>
+        </div>
+      </div>
+
     <script>
-      var index = 0; //이미지에 접근하는 인덱스
+      var index = 0; 
       window.onload = function () {
         slideShow();
       };
 
       function slideShow() {
         var i;
-        var x = document.getElementsByClassName("slide1"); //slide1에 대한 dom 참조
+        var x = document.getElementsByClassName("slide1");
         for (i = 0; i < x.length; i++) {
-          x[i].style.display = "none"; //처음에 전부 display를 none으로 한다.
+          x[i].style.display = "none"; 
         }
         index++;
         if (index > x.length) {
-          index = 1; //인덱스가 초과되면 1로 변경
+          index = 1; 
         }
-        x[index - 1].style.display = "block"; //해당 인덱스는 block으로
-        setTimeout(slideShow, 2000); //함수를 2초마다 호출
-      }
+        x[index - 1].style.display = "block";
+        setTimeout(slideShow, 2000); 
+        }
     </script>
-
-    <div>
-      <img class="slide1" src="{{ url_for('static', filename = 'img/img_1.jpg') }}" width:"450" height="500"> <img
-      class="slide1" src="{{ url_for('static', filename = 'img/img_2.jpg') }}" width:"450" height="500"> <img
-      class="slide1" src="{{ url_for('static', filename = 'img/img_3.jpg') }}" width:"450" height="500">
-    </div>
-          <h3 class ="intext"> <strong>내 반려견의 그림을 그리는 방법?<br></strong><br>
-            <strong>LimnPet!</strong><br><br>
-            LimnPet은 반려견 커스텀 굿즈 제작을 위한 GAN 기반 cartoon stylization 상용서비스입니다.<br><br>
-            반려견 커스텀 굿즈 제작 과정간 따로 그림 서비스를 받아야하는 불편함을 해소하기 위한<br>
-            GAN 기반 반려견 그림 자동 생성 및 저장/공유 서비스를 제공합니다<br><br>
-            생성된 이미지를 기반으로 반려견 커스텀 굿즈(휴대폰 케이스, 컵, 옷 등)를 제작할 수 있도록<br>
-            관련 업체와 사용자간 의사소통 채널 형성 기반 마련합니다.<br>
-        </h3>
-      </div>
-  </div>
-
-  <!-- 서비스 -->
-  <div class="list">
-      <div class="three">
-
-      </div>
-  </div>
-
-  <!-- 콘택트 -->
-  <div class="list">
-      <div class = "four">
-          <img class = "contact_img" src ="{{ url_for('static', filename = 'img/bg.jpg') }}">
-          <a href="https://www.limnpet.ml" class="ct">Home</a>
-          <a href="mailto:allislijell@gmail.com" class="ct">Gmail</a>
-          <a href="https://github.com/LiJell/Final-pjt" class="ct">Github</a>
-      </div>
-  </div>
-
-  <!-- 굿즈 -->
-  <div class="list">
-    <div class = "five">
-      <h1><br><br> 🐶 Goods Shops 🐶 </h1>
-            <div class = "container goods">
-                <div class="row">
-                    <div class="col">
-                        <div class="lists">
-                            <img class = "list_img" src="./imgs/what i love/.jpg" alt="">
-                            <p class = "list_text"> goods1</p>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="lists">
-                            <img class = "list_img" src="./imgs/what i love/.jpg" alt="">
-                            <p class = "list_text"> goods2</p>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="lists">
-                            <img class = "list_img" src="./imgs/what i love/.jpg" alt="">
-                            <p class = "list_text"> goods3</p>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="lists">
-                            <img class = "list_img" src="./imgs/what i love/.jpg" alt="">
-                            <p class = "list_text"> goods4</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-    </div>
-  </div>
-</div>
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-</body>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  </body>
+</html>
