--- a/templates/contact.html
+++ b/templates/contact.html
@@ -8,7 +8,7 @@
         <link rel = "stylesheet" href = "{{ url_for('static', filename = 'css/main.css') }}">
         <link rel = "stylesheet" href = "{{ url_for('static', filename = 'css/contact.css') }}">
         <style>
-            @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap');
+            @import url('https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap');
         </style>
     </head>
 
@@ -27,12 +27,42 @@
 
         <div id="container" role="main">
             <div class="list">
-            <div class="four">
-                <img class = "contact_img" src ="{{ url_for('static', filename = 'img/bg.jpg') }}">
-                <div>
-                    <a href="https://www.limnpet.ml" class="ct">Home</a>
-                    <a href="mailto:allislijell@gmail.com" class="ct">Gmail</a>
-                    <a href="https://github.com/LiJell/Final-pjt" class="ct">Github</a>
+                <div class="four">
+                    <div class="member">
+                        <img src ="{{ url_for('static', filename = 'img/bg.jpg') }}">
+                        <p>김한주</p>
+                        <p>E-mail : sjh7397@naver.com</p>
+                        <p>카카오톡 : Lilac3</p>
+                    </div> 
+                    <div class="member">
+                        <img src ="{{ url_for('static', filename = 'img/bg.jpg') }}">
+                        <p>김민지</p>
+                        <p>E-mail : sjh7397@naver.com</p>
+                        <p>카카오톡 : Lilac3</p>
+                    </div> 
+                    <div class="member">
+                        <img src ="{{ url_for('static', filename = 'img/bg.jpg') }}">
+                        <p>성연재</p>
+                        <p>E-mail : sjh7397@naver.com</p>
+                        <p>카카오톡 : Lilac3</p>
+                    </div> 
+                    <div class="member">
+                        <img src ="{{ url_for('static', filename = 'img/bg.jpg') }}">
+                        <p>송종호</p>
+                        <p>E-mail : sjh7397@naver.com</p>
+                        <p>카카오톡 : Lilac3</p>
+                    </div> 
+                    <div class="member">
+                        <img src ="{{ url_for('static', filename = 'img/bg.jpg') }}">
+                        <p>정영훈</p>
+                        <p>E-mail : sjh7397@naver.com</p>
+                        <p>카카오톡 : Lilac3</p>
+                    </div> 
+                    <div>
+                        <a href="https://www.limnpet.ml" class="ct">Home</a>
+                        <a href="" class="ct">Notion</a>
+                        <a href="https://github.com/LiJell/Final-pjt" class="ct">Github</a>
+                    </div>
                 </div>
             </div>
         </div>
