--- a/templates/goods.html
+++ b/templates/goods.html
@@ -8,7 +8,7 @@
         <link rel = "stylesheet" href = "{{ url_for('static', filename = 'css/main.css') }}">
         <link rel = "stylesheet" href = "{{ url_for('static', filename = 'css/goods.css') }}">
         <style>
-            @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap');
+            @import url('https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap');
         </style>
     </head>
 
