--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,234 +1,229 @@
 .input-file-button{
-  padding: 6px 25px;
-  background-color:#FF6600;
-  border-radius: 4px;
-  color: white;
-  cursor: pointer;
-}
-
-
-
-
-
-/*기존*/
-body {
-	font-family: 'Ubuntu', sans-serif;
-	background-color: #fff;
-}
-.file-upload {
-    text-align: center ;
-	width: 60%;
-	border-radius: 10px;
-	border: solid 1.5px #f6f7fa;
-	background-color: #f6f7fa;
-	padding: 13% 5%;
-	margin: 0 auto
-	/* width: 600px; */
-
-}
-.file-upload-btn {
-	width: 100%;
-	margin: 0;
-	color: #fff;
-	background: #1fb264;
-	border: none;
-	padding: 10px;
+	padding: 6px 25px;
+	background-color:#FF6600;
 	border-radius: 4px;
-	border-bottom: 4px solid #15824b;
-	transition: all 0.2s ease;
-	outline: none;
-	text-transform: uppercase;
-	font-weight: 700;
-}
-.file-upload-btn:hover {
-	background: #1aa059;
-	color: #fff;
-	transition: all 0.2s ease;
+	color: white;
 	cursor: pointer;
-}
-.file-upload-btn:active {
-	border: 0;
-	transition: all 0.2s ease;
-}
-.file-upload-content {
-	display: none;
-	text-align: center;
-}
-.file-upload-input {
-	position: absolute;
-	margin: 0;
-	padding: 0;
-	width: 100%;
-	height: 100%;
-	outline: none;
-	opacity: 0;
-	cursor: pointer;
-	top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-}
-.image-upload-wrap {
-	border: 4px dashed #1fb264;
-	position: relative;
-}
-.image-upload-wrap:hover {
-	background-color: #1fb264;
-	border: 4px dashed #fff;
-}
-.image-dropping {
-	background-color: #1fb264;
-	border: 4px dashed #fff;
-}
-.image-title-wrap {
-    display:block;
-    margin:auto;
-	padding: 0 15px 15px;
-	color: #222;
-}
-.drag-text {
-	text-align: center;
-}
-.drag-text h3 {
-	width: 50%;
-	font-weight: 100;
-	text-transform: uppercase;
-	color: #15824b;
-	font-family: 'Ubuntu', sans-serif;
-	font-size: 1.5rem;
-	line-height: 1.53;
-	text-align: center;
-	color: #35465d;
-	margin: 0 auto;
-}
-.file-upload-image {
-	max-height: 500px;
-	max-width: 500px;
-	display: block;
-	margin: auto;
-	padding: 20px;
-    position: relative;
-}
-.remove-image {
-	width: 200px;
-	margin: 0;
-	color: #fff;
-	background: #cd4535;
-	border: none;
-	padding: 10px;
-	border-radius: 4px;
-	border-bottom: 4px solid #b02818;
-	transition: all 0.2s ease;
-	outline: none;
-	text-transform: uppercase;
-	font-weight: 700;
-}
-.remove-image:hover {
-	background: #c13b2a;
-	color: #fff;
-	transition: all 0.2s ease;
-	cursor: pointer;
-}
-.remove-image:active {
-	border: 0;
-	transition: all 0.2s ease;
-}
-
-.nav-distance {
-	padding: 2.1% 7.7%;
-}
-
-.navbar-light .navbar-brand {
-	font-family: 'Ubuntu', sans-serif;
-	line-height: 1.68;
-	text-align: left;
-	color: #35465d;
-}
-
-.navbar-light .navbar-toggler {
-	border-color: #fff;
-}
-
-.section {
-	margin-top: 100px;
-}
-
-.title {
-	font-family: 'Ubuntu', sans-serif;
-	line-height: 1.67;
-	text-align: center;
-	color: #35465d;
-}
-
-.subtitle {
-	font-family: 'Ubuntu', sans-serif;
-	line-height: 1.53;
-	text-align: center;
-	color: #35465d;
-}
-
-/* On screens that are 600px or less, set the background color to olive */
-@media screen and (max-width: 600px) {
-  html {
-    font-size: 10px;
   }
-	.navbar-brand {
-		font-size: 2rem;
+  
+  
+  
+  
+  
+  /*기존*/
+  body {
+	  background-color: #fff;
+  }
+  .file-upload {
+	  text-align: center ;
+	  /* position:relative; */
+	  width: 100%;
+	  border-radius: 10px;
+	  border: solid 1.5px #f6f7fa;
+	  background-color: #f6f7fa;
+	  padding-top: 2rem;
+	  padding-bottom: 2rem;
+	  margin: 3rem auto;
+  }
+  .file-upload-btn {
+	  width: 100%;
+	  margin: 0;
+	  color: #fff;
+	  background: #1fb264;
+	  border: none;
+	  padding: 10px;
+	  border-radius: 4px;
+	  border-bottom: 4px solid #15824b;
+	  transition: all 0.2s ease;
+	  outline: none;
+	  text-transform: uppercase;
+	  font-weight: 700;
+  }
+  .file-upload-btn:hover {
+	  background: #1aa059;
+	  color: #fff;
+	  transition: all 0.2s ease;
+	  cursor: pointer;
+  }
+  .file-upload-btn:active {
+	  border: 0;
+	  transition: all 0.2s ease;
+  }
+  .file-upload-content {
+	  display: none;
+	  text-align: center;
+  }
+  .file-upload-input {
+	  position: absolute;
+	  margin: 1rem auto;
+	  padding: 1rem;
+	  width: 10rem;
+	  padding: 1rem;
+	  outline: none;
+	  opacity: 0;
+	  cursor: pointer;
+	  top: 0;
+	  left: 0;
+	  right: 0;
+	  bottom: 0;
+  }
+  .image-upload-wrap {
+	  width: 10rem; 
+	  padding: 1rem;
+	  margin: .5rem auto;
+	  border: 4px dashed #1fb264;
+	  position: relative;
+  }
+  .image-upload-wrap:hover {
+	  background-color: #1fb264;
+	  border: 4px dashed #fff;
+  }
+  .image-dropping {
+	  background-color: #1fb264;
+	  border: 4px dashed #fff;
+  }
+  .image-title-wrap {
+	  display:block;
+	  margin:auto;
+	  padding: 0 15px 15px;
+	  color: #222;
+  }
+  .drag-text {
+	  text-align: center;
+  }
+  .drag-text h3 {
+	  width: 50%;
+	  font-weight: 100;
+	  text-transform: uppercase;
+	  color: #15824b;
+	  font-size: 1.5rem;
+	  line-height: 1.53;
+	  text-align: center;
+	  color: #35465d;
+	  margin: 0 auto;
+  }
+  .file-upload-image {
+	  width: 10rem;
+	  display: block;
+	  margin: 1rem auto;
+	  padding: auto;
+	  position: relative;
+  }
+  .remove-image {
+	  width: 10rem;
+	  margin: 1rem;
+	  color: #fff;
+	  background: #cd4535;
+	  border: none;
+	  padding: 0.8rem;
+	  border-radius: 4px;
+	  transition: all 0.2s ease;
+	  outline: none;
+	  text-transform: uppercase;
+	  font-weight: 700;
+  }
+  .remove-image:hover {
+	  background: #c13b2a;
+	  color: #fff;
+	  transition: all 0.2s ease;
+	  cursor: pointer;
+  }
+  .remove-image:active {
+	  border: 0;
+	  transition: all 0.2s ease;
+  }
+  
+  .nav-distance {
+	  padding: 2.1% 7.7%;
+  }
+  
+  .navbar-light .navbar-brand {
+	  line-height: 1.68;
+	  text-align: left;
+	  color: #35465d;
+  }
+  
+  .navbar-light .navbar-toggler {
+	  border-color: #fff;
+  }
+  
+  .section {
+	  margin-top: 100px;
+  }
+  
+  .title {
+	  line-height: 1.67;
+	  text-align: center;
+	  color: #35465d;
+  }
+  
+  .subtitle {
+	  font-family: 'Ubuntu', sans-serif;
+	  line-height: 1.53;
+	  text-align: center;
+	  color: #35465d;
+  }
+  
+  /* On screens that are 600px or less, set the background color to olive */
+  @media screen and (max-width: 600px) {
+	html {
+	  font-size: 10px;
 	}
-}
-
-.github-link {
-	font-family: 'Ubuntu', sans-serif;
-	font-weight: bolder;
-	font-size: 1.0rem;
-	line-height: 1.71;
-	text-align: center;
-	color: #000000;
-	text-decoration: underline;
-}
-
-.github-link hover {
-	font-family: 'Ubuntu', sans-serif;
-	font-weight: bolder;
-	font-size: 1.0rem;
-	line-height: 1.71;
-	text-align: center;
-	color: #2fb004;
-	text-decoration: underline;
-}
-
-.LimnPet-icon {
-	width: 10%
-}
-
-
-
-
-.image-upload-wrap {
-	object-fit: contain;
-	border-radius: 10px;
-	border: dashed 1.5px
-		#35465d;
-	background-color:
-		#ffffff;
-}
-
-.image-upload-wrap hover {
-	object-fit: contain;
-	border-radius: 10px;
-	border: dashed 1.5px
-		#35465d;
-	background-color:
-		#35465d;
-}
-
-.upload-text {
-	width: 50%;
-	font-family: 'Ubuntu', sans-serif;
-	font-size: 1.6 rem;
-	line-height: 1.53;
-	text-align: center;
-	color: #35465d;
-	margin: 0 auto;
-}
-
+	  .navbar-brand {
+		  font-size: 2rem;
+	  }
+  }
+  
+  .github-link {
+	  font-weight: bolder;
+	  font-size: 1.0rem;
+	  line-height: 1.71;
+	  text-align: center;
+	  color: #000000;
+	  text-decoration: underline;
+  }
+  
+  .github-link hover {
+	  font-weight: bolder;
+	  font-size: 1.0rem;
+	  line-height: 1.71;
+	  text-align: center;
+	  color: #2fb004;
+	  text-decoration: underline;
+  }
+  
+  .LimnPet-icon {
+	  width: 10%
+  }
+  
+  
+  
+  
+  .image-upload-wrap {
+	  object-fit: contain;
+	  border-radius: 10px;
+	  border: dashed 1.5px
+		  #35465d;
+	  background-color:
+		  #ffffff;
+  }
+  
+  .image-upload-wrap hover {
+	  object-fit: contain;
+	  border-radius: 10px;
+	  border: dashed 1.5px
+		  #35465d;
+	  background-color:
+		  #35465d;
+  }
+  
+  .upload-text {
+	  width: 100%;
+	  font-size: 1.6 rem;
+	  line-height: 1.53;
+	  text-align: center;
+	  color: #35465d;
+	  margin: 0 auto;
+  }
+  
+  
