--- a/templates/service.html
+++ b/templates/service.html
@@ -11,8 +11,8 @@
     <link rel = "stylesheet" href = "{{ url_for('static', filename = 'css/service.css') }}">
 
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap');
-    </style>
+      @import url('https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap');
+  </style>
   </head>
 
   <body>
@@ -46,7 +46,7 @@
           <section>
             <div class="file-upload">
               <form action="/test" method="POST" enctype="multipart/form-data">
-                <div style="display:inline">스타일 선택</div>
+                <div>스타일 선택</div>
                 <select name="style" class="btn btn-light" style="text-align: center; display:inline">
                   <option value="hayao">Hayao</option>
                   <option value="paprika">Paprika</option>
@@ -55,13 +55,33 @@
                   <option value="ladyOscar">Ladyoscar</option>
                   <option value="Onepiece">Onepiece</option>
                 </select>
-                <div class="image-upload-wrap" style="width: 65%; margin: 0 auto">
-                  <input class="file-upload-input" name="file" type="file" accept="image/*" onchange="this.form.submit();search()"/>
+                <div style="margin-top:1rem">사진 업로드</div>
+                <div class="image-upload-wrap">
+                  <input class="file-upload-input" name="file" type="file" accept="image/*" onchange="readURL(this);"/>
                     <div class="drag-text">
-                      <img src="static/img/icon-1294806.svg" class="mt-5 pt-2 upload" style="width: 10%"/>
+                      <img src="static/img/icon-1294806.svg" class="mt-5 pt-2 upload" style="width: 30%"/>
                       <h5 class="mb-5 pd-5 pt-4 upload-text">Drop or Select a image</h5>
                     </div>
                 </div>
+                <div class="file-upload-content">
+                  <img
+                    class="file-upload-image"
+                    id="pet-image"
+                    src="#"
+                    alt="your image"
+                  />        
+                  <div class="image-title-wrap">
+                    <button type="button" onclick="removeUpload(this)" class="remove-image">
+                      <span class="image-title">사진 다시 올리기</span>
+                    </button>
+                  </div>
+                </div>
+                <div id="submit_button">
+                  <button class="remove-image" type="submit" onClick="location.href='/test';search();">
+                    <span class="image-title">그림 그리기</span>
+                  </button>
+                </div>
+                
               </form>
             </div>
           </section>
@@ -70,7 +90,7 @@
       </div>
       
     </div>
-    
+
     <!--disqus 부분-->
     <div id="disqus_thread"></div>
     
@@ -100,36 +120,36 @@
       ></noscript
     >
     <script> // input file들이 들어오면 아래 코드들이 실행
-      // function readURL(input) {
-      //   if (input.files && input.files[0]) {
-      //     var reader = new FileReader();
-      //     reader.onload = function (e) {
-      //       $(".image-upload-wrap").hide();
-      //       $(".file-upload-image").attr("src", e.target.result);
-      //       $(".file-upload-content").show();
-      //     };
-      //     reader.readAsDataURL(input.files[0]);
-      //     init().then(() => {
-      //       console.log("hello");
-      //       predict();
-      //     });
-      //   } else {
-      //     removeUpload();
-      //   }
-      // }
+      function readURL(input) {
+        if (input.files && input.files[0]) {
+          var reader = new FileReader();
+          reader.onload = function (e) {
+            $(".image-upload-wrap").hide();
+            $(".file-upload-image").attr("src", e.target.result);
+            $(".file-upload-content").show();
+          };
+          reader.readAsDataURL(input.files[0]);
+          init().then(() => {
+            console.log("hello");
+            predict();
+          });
+        } else {
+          removeUpload();
+        }
+      }
 
-      // function removeUpload() {
-      //   $(".file-upload-input").replaceWith($(".file-upload-input").clone());
-      //   $(".file-upload-content").hide();
-      //   $(".image-upload-wrap").show();
-      // }
-      // $(".image-upload-wrap").bind("dragover", function () {
-      //   $(".image-upload-wrap").addClass("image-dropping");
-      // });
-      // $(".image-upload-wrap").bind("dragleave", function () {
-      //   $(".image-upload-wrap").removeClass("image-dropping");
-      // });
-      // //원래 그림이 존재하지만, 이 스크립트로 그림이 숨겨짐 window.onload -> 뒤로가기 누르면 버튼이 무효화 onpageshow -> 뒤로가기 눌러도 유지
+      function removeUpload() {
+        $(".file-upload-input").replaceWith($(".file-upload-input").clone());
+        $(".file-upload-content").hide();
+        $(".image-upload-wrap").show();
+      }
+      $(".image-upload-wrap").bind("dragover", function () {
+        $(".image-upload-wrap").addClass("image-dropping");
+      });
+      $(".image-upload-wrap").bind("dragleave", function () {
+        $(".image-upload-wrap").removeClass("image-dropping");
+      });
+      //원래 그림이 존재하지만, 이 스크립트로 그림이 숨겨짐 window.onload -> 뒤로가기 누르면 버튼이 무효화 onpageshow -> 뒤로가기 눌러도 유지
       
       window.onpageshow = function() {
         $("#div_load_image").hide();
