--- a/templates/goods.html
+++ b/templates/goods.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <!-- saved from url=(0028)https://www.limnpet.ml/goods -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        
+
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Goods</title>
-        <link rel="stylesheet" href="./static/Goods_files/main.css">
-        <link rel="stylesheet" href="./static/Goods_files/goods.css">
+        <link rel="stylesheet" href="{{ url_for('static', filename = 'css/main.css') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename = 'css/goods.css') }}">
         <style>
             @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap');
             .lists1 {
@@ -132,7 +132,7 @@
                 </ul>
             </nav>
         </div>
-        
+
         <div id="container" role="main">
 
             <div class="list">
